# exqudens-cpp-cmake-study-project-a-grade

./: CMakeLists.txt  readme.md
src/main/cpp/application/: Main.cpp  Runnable.cpp  Runnable.h
src/main/cpp/application/model/: DoubleArray.h  GradedArtifact.h  GradedArtifacts.h  IntArray.h  StringArray.h  Student.h  Students.h
src/main/cpp/application/util/: Strings.cpp  Strings.h
src/test/cpp/application/: Main.cpp  TestData.h
